chore: apply customization logo.alt

--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -110,5 +110,8 @@
   "social": {
     "instagram": "@yourbusiness",
     "facebook": "YourBusiness"
+  },
+  "logo": {
+    "alt": "Your Business - Artisan Bakery"
   }
 }
